Incorrect selection when tall float is present https://bugs.webkit.org/show_bug.cgi?id=226552 <rdar://problem/78781056>

Reviewed by Simon Fraser.

Source/WebCore:

While floats may end up at the bottom of their containers, they do not necessarily stretch the container by their full height.
e.g. <div><div style="float: left; height: 10px; width: 10px;"></div>some<br>text<br>here</div>
The [some text here] content wraps around the float and stretches the containing block <div>.

Test: editing/selection/select-out-of-floated-non-editable-13.html

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::positionForPoint):

LayoutTests:

* editing/selection/select-out-of-floated-non-editable-07.html:
* editing/selection/select-out-of-floated-non-editable-13-expected.txt: Added.
* editing/selection/select-out-of-floated-non-editable-13.html: Added.


Canonical link: https://commits.webkit.org/238406@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@278379 268f45cc-cd09-0410-ab3c-d52691b4dbfc